--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "movieland-cinema-mobile",
+    "name": "Movieland Cinema",
     "slug": "movieland-cinema-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
