--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-web": "~0.18.9",
-    "react-native-maps": "1.3.2"
+    "react-native-maps": "1.3.2",
+    "expo-font": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
