--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
+    "axios": "^1.3.4",
     "expo": "~47.0.9",
     "expo-app-loading": "~2.1.1",
     "expo-font": "~11.0.1",
